@@ -1,3 +1,5 @@
+- Refactor: Remove deprecated shifts enrolment service
+
 7.0.0 (10-10-2022)
 - Refactor: Remove deprecated functionalities
 
